Cleanup dependency management